mermaid file location as hierarchy

--- a/demos/mermaid.ipynb
+++ b/demos/mermaid.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-05-14T08:36:35.062221Z",
-     "start_time": "2024-05-14T08:36:33.056630Z"
+     "end_time": "2024-05-14T08:45:26.719945Z",
+     "start_time": "2024-05-14T08:45:24.632626Z"
     }
    },
    "source": [
@@ -28,8 +28,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-14T08:36:35.065978Z",
-     "start_time": "2024-05-14T08:36:35.063514Z"
+     "end_time": "2024-05-14T08:45:26.723587Z",
+     "start_time": "2024-05-14T08:45:26.721127Z"
     }
    },
    "id": "269587c8d24261d2",
@@ -45,8 +45,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-14T08:36:35.094162Z",
-     "start_time": "2024-05-14T08:36:35.067057Z"
+     "end_time": "2024-05-14T08:45:26.745063Z",
+     "start_time": "2024-05-14T08:45:26.724685Z"
     }
    },
    "id": "145c113799d9b3ec",
@@ -76,8 +76,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-14T08:36:35.098746Z",
-     "start_time": "2024-05-14T08:36:35.095465Z"
+     "end_time": "2024-05-14T08:45:26.764061Z",
+     "start_time": "2024-05-14T08:45:26.745874Z"
     }
    },
    "id": "168746708c3dc0d0",
@@ -109,20 +109,14 @@
    "execution_count": 4
   },
   {
-   "cell_type": "code",
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "# Specifying adapters and aggregators wtih ':::' (which can be done once per node)"
+    "Specifying adapters and aggregators wtih `:::` (which can be done once per node) OR as link description \n",
+    "\n",
+    "`<node> -- <adapter_name> --> <parent_node>`"
    ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-14T08:36:35.922219Z",
-     "start_time": "2024-05-14T08:36:35.917285Z"
-    }
-   },
-   "id": "feb46984b5abadcd",
-   "outputs": [],
-   "execution_count": 5
+   "id": "dd1f313b01d29081"
   },
   {
    "cell_type": "code",
@@ -137,8 +131,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-14T08:36:36.594875Z",
-     "start_time": "2024-05-14T08:36:36.567198Z"
+     "end_time": "2024-05-14T08:45:26.800070Z",
+     "start_time": "2024-05-14T08:45:26.767193Z"
     }
    },
    "id": "12df5263ea771499",
@@ -153,12 +147,12 @@
        "  {'name': 'b2', 'adapter': 'bw', 'config': None}]}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -174,8 +168,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-14T08:36:37.512329Z",
-     "start_time": "2024-05-14T08:36:37.495577Z"
+     "end_time": "2024-05-14T08:45:26.821235Z",
+     "start_time": "2024-05-14T08:45:26.801207Z"
     }
    },
    "id": "3b46506c200f06e6",
@@ -204,7 +198,7 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 6
   },
   {
    "cell_type": "code",
@@ -221,8 +215,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-14T08:36:38.377066Z",
-     "start_time": "2024-05-14T08:36:38.340547Z"
+     "end_time": "2024-05-14T08:45:26.856238Z",
+     "start_time": "2024-05-14T08:45:26.822233Z"
     }
    },
    "id": "fb1cd79819808d2b",
@@ -251,7 +245,7 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -269,8 +263,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-14T08:36:39.272006Z",
-     "start_time": "2024-05-14T08:36:39.239653Z"
+     "end_time": "2024-05-14T08:45:26.883359Z",
+     "start_time": "2024-05-14T08:45:26.857278Z"
     }
    },
    "id": "b26929ea40d599d8",
@@ -303,7 +297,7 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -325,13 +319,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-14T08:36:41.241713Z",
-     "start_time": "2024-05-14T08:36:41.213162Z"
+     "end_time": "2024-05-14T08:45:26.922099Z",
+     "start_time": "2024-05-14T08:45:26.884511Z"
     }
    },
    "id": "11c9f09bd216af6c",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 9
   },
   {
    "cell_type": "code",
@@ -370,45 +364,40 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-14T08:36:44.643481Z",
-     "start_time": "2024-05-14T08:36:43.657947Z"
+     "end_time": "2024-05-14T08:45:27.923373Z",
+     "start_time": "2024-05-14T08:45:26.922957Z"
     }
    },
    "id": "76e948074adecfda",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 10
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-02-21 14:23:53,782 - ............demos.enbios.base - INFO - Running scenario 'default scenario'\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "{'default scenario': {'name': 'root',\n  'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n    'magnitude': 0.032264059590470524},\n   'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.001447083969231639},\n   'WCP': {'unit': 'cubic meter', 'magnitude': 0.00032440108814901574}},\n  'output': {'unit': 'kilowatt_hour', 'magnitude': 2.0},\n  'children': [{'name': 'b1',\n    'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n      'magnitude': 0.015243611332791748},\n     'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.0010661197743596256},\n     'WCP': {'unit': 'cubic meter', 'magnitude': 0.000136359937516592}},\n    'output': {'unit': 'kilowatt_hour', 'magnitude': 1.0}},\n   {'name': 'b2',\n    'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n      'magnitude': 0.017020448257678778},\n     'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.00038096419487201346},\n     'WCP': {'unit': 'cubic meter', 'magnitude': 0.00018804115063242375}},\n    'output': {'unit': 'kilowatt_hour', 'magnitude': 1.0}}]}}"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "exp.run()"
    ],
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2024-02-21T13:24:39.653040381Z",
-     "start_time": "2024-02-21T13:23:53.786854414Z"
+     "start_time": "2024-05-14T08:45:27.924171Z"
     }
    },
    "id": "e92285b0b4db77cb",
-   "execution_count": 4
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-05-14 10:45:27,924 - demos.enbios.base - INFO - Running scenario 'default scenario'\n",
+      "2024-05-14 10:45:35,376 - enbios.bw2.MultiLCA_util - DEBUG - Demand 0/2\n"
+     ]
+    }
+   ],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -418,9 +407,8 @@
   },
   {
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-14T08:36:48.895506Z",
-     "start_time": "2024-05-14T08:36:47.935892Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "cell_type": "code",
@@ -452,63 +440,12 @@
     "    \"hierarchy\": \"data/mermaid/simple_mermaid.mermaid\",\n",
     "}\n",
     "\n",
-    "exp = Experiment(exp_config)"
+    "exp = Experiment(exp_config)\n",
+    "exp.run()"
    ],
    "id": "35a1c07a7f3700e",
    "outputs": [],
-   "execution_count": 12
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-14T08:37:26.921996Z",
-     "start_time": "2024-05-14T08:37:00.411211Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "exp.run()",
-   "id": "3edcd46e6e56a5e7",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-05-14 10:37:00,413 - demos.enbios.base - INFO - Running scenario 'default scenario'\n",
-      "2024-05-14 10:37:07,841 - enbios.bw2.MultiLCA_util - DEBUG - Demand 0/2\n",
-      "2024-05-14 10:37:15,860 - enbios.bw2.MultiLCA_util - DEBUG - Demand 1/2\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'default scenario': {'name': 'root',\n",
-       "  'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
-       "    'magnitude': 0.03226405959967699},\n",
-       "   'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.0014470839901441494},\n",
-       "   'WCP': {'unit': 'cubic meter', 'magnitude': 0.00032440108819546665}},\n",
-       "  'output': [{'unit': 'kilowatt_hour', 'magnitude': 2.0, 'label': None}],\n",
-       "  'children': [{'name': 'b1',\n",
-       "    'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
-       "      'magnitude': 0.015243611343654916},\n",
-       "     'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.0010661197824375084},\n",
-       "     'WCP': {'unit': 'cubic meter', 'magnitude': 0.00013635993757804614}},\n",
-       "    'output': [{'unit': 'kilowatt_hour', 'magnitude': 1.0, 'label': None}],\n",
-       "    'bw_activity_code': 'ed3da88fc23311ee183e9ffd376de89b'},\n",
-       "   {'name': 'b2',\n",
-       "    'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
-       "      'magnitude': 0.01702044825602208},\n",
-       "     'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.0003809642077066412},\n",
-       "     'WCP': {'unit': 'cubic meter', 'magnitude': 0.00018804115061742048}},\n",
-       "    'output': [{'unit': 'kilowatt_hour', 'magnitude': 1.0, 'label': None}],\n",
-       "    'bw_activity_code': '6ebfe52dc3ef5b4d35bb603b03559023'}]}}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 14
+   "execution_count": null
   }
  ],
  "metadata": {
