--- a/demos/mermaid.ipynb
+++ b/demos/mermaid.ipynb
@@ -379,10 +379,8 @@
    ],
    "metadata": {
     "collapsed": false,
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
+     "end_time": "2024-05-14T08:45:51.156725Z",
      "start_time": "2024-05-14T08:45:27.924171Z"
     }
    },
@@ -393,11 +391,41 @@
      "output_type": "stream",
      "text": [
       "2024-05-14 10:45:27,924 - demos.enbios.base - INFO - Running scenario 'default scenario'\n",
-      "2024-05-14 10:45:35,376 - enbios.bw2.MultiLCA_util - DEBUG - Demand 0/2\n"
+      "2024-05-14 10:45:35,376 - enbios.bw2.MultiLCA_util - DEBUG - Demand 0/2\n",
+      "2024-05-14 10:45:43,290 - enbios.bw2.MultiLCA_util - DEBUG - Demand 1/2\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'default scenario': {'name': 'root',\n",
+       "  'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
+       "    'magnitude': 0.03226405959967699},\n",
+       "   'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.0014470839901441494},\n",
+       "   'WCP': {'unit': 'cubic meter', 'magnitude': 0.00032440108819546665}},\n",
+       "  'output': [{'unit': 'kilowatt_hour', 'magnitude': 2.0, 'label': None}],\n",
+       "  'children': [{'name': 'b1',\n",
+       "    'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
+       "      'magnitude': 0.015243611343654916},\n",
+       "     'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.0010661197824375084},\n",
+       "     'WCP': {'unit': 'cubic meter', 'magnitude': 0.00013635993757804614}},\n",
+       "    'output': [{'unit': 'kilowatt_hour', 'magnitude': 1.0, 'label': None}],\n",
+       "    'bw_activity_code': 'ed3da88fc23311ee183e9ffd376de89b'},\n",
+       "   {'name': 'b2',\n",
+       "    'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
+       "      'magnitude': 0.01702044825602208},\n",
+       "     'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.0003809642077066412},\n",
+       "     'WCP': {'unit': 'cubic meter', 'magnitude': 0.00018804115061742048}},\n",
+       "    'output': [{'unit': 'kilowatt_hour', 'magnitude': 1.0, 'label': None}],\n",
+       "    'bw_activity_code': '6ebfe52dc3ef5b4d35bb603b03559023'}]}}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": null
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -407,8 +435,9 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-05-14T08:46:16.288912Z",
+     "start_time": "2024-05-14T08:45:51.161444Z"
     }
    },
    "cell_type": "code",
@@ -444,8 +473,79 @@
     "exp.run()"
    ],
    "id": "35a1c07a7f3700e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-05-14 10:45:52,404 - demos.enbios.base - INFO - Running scenario 'default scenario'\n",
+      "2024-05-14 10:46:00,080 - enbios.bw2.MultiLCA_util - DEBUG - Demand 0/2\n",
+      "2024-05-14 10:46:09,252 - enbios.bw2.MultiLCA_util - DEBUG - Demand 1/2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'default scenario': {'name': 'root',\n",
+       "  'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
+       "    'magnitude': 0.03226405959967699},\n",
+       "   'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.0014470839901441494},\n",
+       "   'WCP': {'unit': 'cubic meter', 'magnitude': 0.00032440108819546665}},\n",
+       "  'output': [{'unit': 'kilowatt_hour', 'magnitude': 2.0, 'label': None}],\n",
+       "  'children': [{'name': 'b1',\n",
+       "    'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
+       "      'magnitude': 0.015243611343654916},\n",
+       "     'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.0010661197824375084},\n",
+       "     'WCP': {'unit': 'cubic meter', 'magnitude': 0.00013635993757804614}},\n",
+       "    'output': [{'unit': 'kilowatt_hour', 'magnitude': 1.0, 'label': None}],\n",
+       "    'bw_activity_code': 'ed3da88fc23311ee183e9ffd376de89b'},\n",
+       "   {'name': 'b2',\n",
+       "    'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
+       "      'magnitude': 0.01702044825602208},\n",
+       "     'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.0003809642077066412},\n",
+       "     'WCP': {'unit': 'cubic meter', 'magnitude': 0.00018804115061742048}},\n",
+       "    'output': [{'unit': 'kilowatt_hour', 'magnitude': 1.0, 'label': None}],\n",
+       "    'bw_activity_code': '6ebfe52dc3ef5b4d35bb603b03559023'}]}}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-14T08:48:37.224966Z",
+     "start_time": "2024-05-14T08:48:37.221629Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "exp.result_to_dict()",
+   "id": "edec86b85c22acdd",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Scenario 'default scenario'>]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 13
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "",
+   "id": "c0f24843404bdea3"
   }
  ],
  "metadata": {
