--- a/demos/environmental_variables.ipynb
+++ b/demos/environmental_variables.ipynb
@@ -30,8 +30,12 @@
     "experiment_config = create_experiment_config(4)\n",
     "\n",
     "config_path = Path(\"data/demo_experiment_2_config.json\")\n",
-    "json.dump(experiment_config, config_path.open(\"w\", encoding=\"utf-8\"), indent=2,\n",
-    "          ensure_ascii=False)\n",
+    "json.dump(\n",
+    "    experiment_config,\n",
+    "    config_path.open(\"w\", encoding=\"utf-8\"),\n",
+    "    indent=2,\n",
+    "    ensure_ascii=False,\n",
+    ")\n",
     "\n",
     "config_path.absolute().as_posix()"
    ],
@@ -164,8 +168,9 @@
    "execution_count": 46,
    "source": [
     "import os\n",
+    "\n",
     "for e, v in os.environ.items():\n",
-    "    print(e,v)"
+    "    print(e, v)"
    ],
    "id": "1359c827049f7310"
   },
