--- a/demos/analying_results_with_pandas.ipynb
+++ b/demos/analying_results_with_pandas.ipynb
@@ -706,7 +706,7 @@
     "# lets just see the total result values.\n",
     "# we use a df['level'] == 0 to create a filter and df[filter] to apply it.\n",
     "\n",
-    "df[df['level'] == 0]"
+    "df[df[\"level\"] == 0]"
    ],
    "id": "8c9ae013913b1b",
    "outputs": [
@@ -1920,7 +1920,11 @@
     }
    },
    "cell_type": "code",
-   "source": "df[df[\"level\"] == 0].sort_values([\"output_0_magnitude\", \"results_GWP1000_magnitude\"], ascending=False)",
+   "source": [
+    "df[df[\"level\"] == 0].sort_values(\n",
+    "    [\"output_0_magnitude\", \"results_GWP1000_magnitude\"], ascending=False\n",
+    ")"
+   ],
    "id": "ebd3c5df9883ddf0",
    "outputs": [
     {
@@ -2397,8 +2401,16 @@
    "cell_type": "code",
    "source": [
     "# this is how we drop (remove) columns from a dataframe.\n",
-    "remove_columns = [\"level\", \"parent_name\", \"results_GWP1000_unit\", 'results_LandUse_unit', \"results_WCP_unit\",\n",
-    "                  \"output_0_unit\", \"output_0_label\", \"bw_activity_code\"]\n",
+    "remove_columns = [\n",
+    "    \"level\",\n",
+    "    \"parent_name\",\n",
+    "    \"results_GWP1000_unit\",\n",
+    "    \"results_LandUse_unit\",\n",
+    "    \"results_WCP_unit\",\n",
+    "    \"output_0_unit\",\n",
+    "    \"output_0_label\",\n",
+    "    \"bw_activity_code\",\n",
+    "]\n",
     "filtered_df.drop(remove_columns, axis=1)"
    ],
    "id": "52fb0759474a3a24",
@@ -2583,14 +2595,6 @@
     }
    ],
    "execution_count": 52
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "7c8b668ca9fab557"
   }
  ],
  "metadata": {
