refactor demo structure

--- a/demos/brightway_adapter_demos/enbios_bw_regionalization.ipynb
+++ b/demos/brightway_adapter_demos/enbios_bw_regionalization.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "import json\n",
     "\n",
-    "config = json.load(open(\"config.json\", encoding=\"utf-8\"))"
+    "config = json.load(open(\"regio_config.json\", encoding=\"utf-8\"))"
    ],
    "id": "initial_id",
    "outputs": [],
