CRITICAL: fixed a bug in bw-non-linear calculation, "get_defaults_from_original" would overwrite set functions.
experiment config gets deepcopied before validation. validated pydantic model seems to have shallow copies of dicts, and mutates them...

some progress on the related demo

--- a/demos/brightway_adapter_demos/enbios_bw_regionalization.ipynb
+++ b/demos/brightway_adapter_demos/enbios_bw_regionalization.ipynb
@@ -276,7 +276,10 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "And run it...",
+   "source": [
+    "And run it...\n",
+    "As you can see the result dictionaries have different keys than normally. Instead of having the methods as keys, they have the form `<method>.<location>` for all method/location combinations."
+   ],
    "id": "ed0a72dfc69292b1"
   },
   {
