--- a/demos/brightway_adapter_demos/enbios_bw_regionalization.ipynb
+++ b/demos/brightway_adapter_demos/enbios_bw_regionalization.ipynb
@@ -340,7 +340,9 @@
     "from bw2data.backends import Activity\n",
     "\n",
     "# Get the bw-adapter and its activities; get the first and only activity\n",
-    "activity = list(exp.get_adapter_by_name(\"brightway-adapter\").activityMap.values())[0].bw_activity\n",
+    "activity = list(exp.get_adapter_by_name(\"brightway-adapter\").activityMap.values())[\n",
+    "    0\n",
+    "].bw_activity\n",
     "\n",
     "\n",
     "def recursively_collect_activities(activity, level: int = 1) -> list[Activity]:\n",
@@ -352,13 +354,16 @@
     "            res.extend(recursively_collect_activities(exc.input, level - 1))\n",
     "        return list(set(res))\n",
     "\n",
+    "\n",
     "move_to_denmark = recursively_collect_activities(activity, 3)\n",
     "print(f\"{len(move_to_denmark)} activities to move to Denmark\")\n",
     "# get its brightway Activity's exchanges\n",
     "for act in move_to_denmark:\n",
-    "    config[\"adapters\"][0][\"config\"][\"simple_regionalization\"][\"set_node_regions\"][act[\"code\"]] = [\"EU\", \"DK\"]\n",
+    "    config[\"adapters\"][0][\"config\"][\"simple_regionalization\"][\"set_node_regions\"][\n",
+    "        act[\"code\"]\n",
+    "    ] = [\"EU\", \"DK\"]\n",
     "\n",
-    "# \n",
+    "#\n",
     "# config\n",
     "exp = Experiment(config)\n",
     "exp.run()"
@@ -503,7 +508,7 @@
    "cell_type": "code",
    "source": [
     "# let's look at the specif of the activity in our hierarchy, as they are needed to pinpoint the activity we are looking for.\n",
-    "# Consider that in other examples, we simply used the activities code to identify activities. However, with a combination of name, location and unit, enbioes is able to filter candidates accordingly and works if the result is one single activity. \n",
+    "# Consider that in other examples, we simply used the activities code to identify activities. However, with a combination of name, location and unit, enbioes is able to filter candidates accordingly and works if the result is one single activity.\n",
     "activity_config = config[\"hierarchy\"][\"children\"][0][\"config\"]\n",
     "activity_config"
    ],
@@ -598,7 +603,9 @@
     }
    },
    "cell_type": "code",
-   "source": "# Note that enbios, uses other brightway internal mechanisms to set all locations, which is much more performant that as described above. However it also possible to call the function in the adapter that makes these changes directly\n",
+   "source": [
+    "# Note that enbios, uses other brightway internal mechanisms to set all locations, which is much more performant that as described above. However it also possible to call the function in the adapter that makes these changes directly"
+   ],
    "id": "825ade5147a1b05e",
    "outputs": [],
    "execution_count": 17
