--- a/demos/brightway_adapter_demos/non_linear_methods.ipynb
+++ b/demos/brightway_adapter_demos/non_linear_methods.ipynb
@@ -390,7 +390,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# we can directly pass functions to \n",
+    "# we can directly pass functions to\n",
     "def cf_double(v: float) -> float:\n",
     "    return v * 2\n",
     "\n",
@@ -512,7 +512,9 @@
    "cell_type": "code",
    "source": [
     "non_linear_config[\"methods\"][\"GWP1000\"][\"module_path_function_name\"] = (\n",
-    "\"../data/bw_test_non_linear_methods_module.py\", \"wpg_1000\")\n",
+    "    \"../data/bw_test_non_linear_methods_module.py\",\n",
+    "    \"wpg_1000\",\n",
+    ")\n",
     "\n",
     "Experiment(config).run()[Experiment.DEFAULT_SCENARIO_NAME][\"results\"]"
    ],
@@ -702,7 +704,12 @@
     }
    },
    "cell_type": "code",
-   "source": "config[\"hierarchy\"][\"children\"][0][\"config\"] = {\"code\": code_name, \"default_output\": {\"unit\": \"unit\", \"magnitude\": 1}}",
+   "source": [
+    "config[\"hierarchy\"][\"children\"][0][\"config\"] = {\n",
+    "    \"code\": code_name,\n",
+    "    \"default_output\": {\"unit\": \"unit\", \"magnitude\": 1},\n",
+    "}"
+   ],
    "id": "b46ae3636c5ad9d6",
    "outputs": [],
    "execution_count": 17
@@ -824,8 +831,8 @@
     "    tuple(method_cfs[0][0]): accum_harmonic_tresh\n",
     "}\n",
     "\n",
-    "if \"module_path_function_name\" in non_linear_config['methods']['GWP1000']:\n",
-    "    del non_linear_config['methods']['GWP1000']['module_path_function_name']\n",
+    "if \"module_path_function_name\" in non_linear_config[\"methods\"][\"GWP1000\"]:\n",
+    "    del non_linear_config[\"methods\"][\"GWP1000\"][\"module_path_function_name\"]\n",
     "exp = Experiment(config)\n",
     "exp.run()[Experiment.DEFAULT_SCENARIO_NAME][\"results\"]"
    ],
